--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -42,11 +42,7 @@ http {
         listen 80;
         listen [::]:80;
     
-        # Edit the server_name to reflect the site domain.
-        #server_name *.develop.tapis.io;
         server_name  {{proxy_nginx_server_name}};
-        #server_name *.*.tapis.io;
-        #server_name  _;
     
         # Redirect with 307 to preserve post data. (301 does not)
         if ($request_method = POST) {
@@ -61,27 +57,11 @@ http {
     server
     {
     
-    #    allow 128.62.0.0/16;
-    #    allow 128.171.129.132;
-    #    allow 128.171.129.133;
-    #    allow 128.171.129.134;
-    #    allow 128.171.129.135;
-    #    allow 132.160.7.0/26;
-    #    allow 132.160.120.0/21;
-    #    allow 129.114.0.0/17;
-    #    allow 127.0.0.1;
-    #    deny all;
-    
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
     
-        # Edit the server_name the reflect the site domain.
-        #server_name  _;
-        #server_name *.develop.tapis.io;
         server_name  {{proxy_nginx_server_name}};
-        #server_name *.*.tapis.io;
     
-        # Update these paths the correct cer and key files.
         ssl_certificate /tmp/ssl/tls.crt;
         ssl_certificate_key /tmp/ssl/tls.key;
     
@@ -111,16 +91,15 @@ http {
         proxy_read_timeout    3600;
         send_timeout          3600;
     
-    #    location /
-    #    {
-    #        rewrite https://tapis.io break;
-    #    }
-
-        {%- if "authenticator" in proxy_nginx_service_list %}
+	# authenticator
         location /v3/oauth2
         {
     #        auth_request /_auth;
+        {%- if "authenticator" in proxy_nginx_service_list %}
             proxy_pass http://authenticator-api:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
@@ -134,7 +113,7 @@ http {
             }    
         }
 
-        {%- endif %}
+	# site-router
         location /v3/site-router
         {
            # this location intentionally does NOT get an auth_request directive since the site-router endpoints IS the target of auth_request.
@@ -143,27 +122,33 @@ http {
            proxy_set_header Host $host;
         }
         
-        {%- if "security" in proxy_nginx_service_list %} 
+	# security 
         location /v3/security
         {
     #        auth_request /_auth;
+        {%- if "security" in proxy_nginx_service_list %}
             proxy_pass http://sk-api:8080;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
-            proxy_set_header Host localhost:5000;
+            proxy_set_header Host $host;
         } 
 
-        {%- endif %}
-        {%- if "tenants" in proxy_nginx_service_list %}
+	# tenants 
         location /v3/tenants
         {
-    
             auth_request /_auth;
+        {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
 
-        {%- endif %}
+	# _auth
         location /_auth {
             internal;
            
@@ -182,37 +167,47 @@ http {
             set $token $http_x_tapis_token;
             if ($token ~ "^$") {
               return 200; 
-    	}
+            }
             proxy_method GET;
             proxy_set_header X-Tapis-Token $http_x_tapis_token;
             proxy_pass https://admin.develop.tapis.io/v3/site-router/check;
-          }
+        }
     
-        {%- if "tenants" in proxy_nginx_service_list %}
+	# sites
         location /v3/sites
         {
     #        auth_request /_auth;
+        {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
         
-        {%- endif %}
-        {%- if "meta" in proxy_nginx_service_list %}
+	# meta
         location /v3/meta
         {
     #        auth_request /_auth;
+        {%- if "meta" in proxy_nginx_service_list %}
             proxy_pass http://restheart-security:8080;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
-            proxy_set_header Host localhost:5000;
+            proxy_set_header Host $host;
         }
         
-        {%- endif %}
-        {%- if "streams" in proxy_nginx_service_list %}
+	# streams
         location /v3/streams
         {
     #        auth_request /_auth;
+        {%- if "streams" in proxy_nginx_service_list %}
             proxy_pass http://streams-api:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
@@ -225,96 +220,122 @@ http {
             }
         }
         
-        {%- endif %}
-        {%- if "files" in proxy_nginx_service_list %}
+	# files
         location /v3/files
         {
     #        auth_request /_auth;
+        {%- if "files" in proxy_nginx_service_list %}
             proxy_pass http://files-api:8080;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
-            proxy_set_header Host localhost:5000;
+            proxy_set_header Host $host;
             client_max_body_size 50G;
         }
 
-        {%- endif %}
-        {%- if "systems" in proxy_nginx_service_list %}
+	# systems
         location /v3/systems
         {
     #        auth_request /_auth;
+        {%- if "systems" in proxy_nginx_service_list %}
             proxy_pass http://systems-api:8080;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
-            proxy_set_header Host localhost:5000;
+            proxy_set_header Host $host;
         }
 
-        {%- endif %}
-        {%- if "tokens" in proxy_nginx_service_list %}
+	# tokens
         location /v3/tokens
         {
             # we intentionally do NOT include an auth_request for Tokens because tokens only handles service requests.
+        {%- if "tokens" in proxy_nginx_service_list %}
             proxy_pass http://tokens-api:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
 
-        {%- endif %}
-        {%- if "jobs" in proxy_nginx_service_list %}
+	# jobs
         location /v3/jobs
         {
     #        auth_request /_auth;
+        {%- if "jobs" in proxy_nginx_service_list %}
             proxy_pass http://jobs-api:8080;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}
             proxy_redirect off;
-            proxy_set_header Host localhost:5000;
+            proxy_set_header Host $host;
         }
 
-        {%- endif %}
-        {%- if "actors" in proxy_nginx_service_list %}
+	# actors 
         location /v3/actors
         {
     #        auth_request /_auth;
+        {%- if "actors" in proxy_nginx_service_list %}
             proxy_pass http://actors-nginx:80;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
 
-        {%- endif %}        
-        {%- if "apps" in proxy_nginx_service_list %}
+	# apps
         location /v3/apps
         {
     #        auth_request /_auth;
+        {%- if "apps" in proxy_nginx_service_list %}
             proxy_pass http://apps-api:8080;
-            proxy_redirect off;
-            proxy_set_header Host localhost:5000;
-        }
-
-        {%- endif %}
-        {%- if "monitoring" in proxy_nginx_service_list %}
-        location /grafana/
-        {
-            proxy_pass http://monitoring-grafana:3000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
 
-        {%- endif %}
-        {%- if "pgrest" in proxy_nginx_service_list %}
+	# monitoring
+        location /grafana/
+        {
+        {%- if "monitoring" in proxy_nginx_service_list %}
+            proxy_pass http://monitoring-grafana:3000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
+            proxy_redirect off;
+            proxy_set_header Host $host;
+        }
+
+	# pgrest
         location /v3/pgrest
         {
     #        auth_request /_auth;
+        {%- if "pgrest" in proxy_nginx_service_list %}
             proxy_pass http://pgrest-api:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
 
-        {%- endif %}
-        {%- if "notifications" in proxy_nginx_service_list %}
+	# notifications
         location /v3/notifications
         {
     #        auth_request /_auth;
+        {%- if "notifications" in proxy_nginx_service_list %}
             proxy_pass http://notifications-api:8080;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
             proxy_redirect off;
-            proxy_set_header Host localhost:5000;
+            proxy_set_header Host $host;
         }
 
-        {%- endif %}
     }
 }
