--- a/templates/authenticator/authenticator-config.yml
+++ b/templates/authenticator/authenticator-config.yml
@@ -13,5 +13,6 @@ data:
       "service_name": "{{authenticator_service_name}}",
       "tenants": {{authenticator_service_tenants|tojson}},
       "sql_db_url": "authenticator-postgres:5432/authenticator",
+      "dev_ldap_tenant_id": "{{authenticator_dev_ldap_tenant_id}}",
       "log_level": "{{authenticator_log_level}}"
     }
