--- a/inputgen/inputdescs/streams_desc.yml
+++ b/inputgen/inputdescs/streams_desc.yml
@@ -104,3 +104,4 @@ streams_tenant_info:
   description: A dictionary mapping streams tenants (keys) to mappings with two fields - stream_db (the db to use for that tenant) and tapis_base_url (the base URL for that tenant)
   source_vars:
     - streams_tenant_info
+  example: "dev: stream_db: StreamsDevTestDB tapis_base_url: https://dev.test.tapis.io"
