handling external VM

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -337,5 +337,17 @@ http {
             proxy_set_header Host $host;
         }
 
+	# globus-proxy
+        location /v3/globus-proxy
+        {
+        {%- if "globus-proxy" in proxy_nginx_service_list %}
+            proxy_pass http://globus-proxy:5000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
+            proxy_redirect off;
+            proxy_set_header Host $host;
+        }
+
     }
 }
