--- a/templates/authenticator/api/api.yml
+++ b/templates/authenticator/api/api.yml
@@ -12,6 +12,27 @@ spec:
         app: authenticator-api
     spec:
       containers:
+      - name: authenticator-ldap
+        image: tacc/slapd
+        ports:
+        - name: ldap
+          containerPort: 389
+        env:
+        - name: LDAP_DOMAIN
+          valueFrom:
+            configMapKeyRef:
+              name: authenticator-config
+              key: LDAP_DOMAIN
+        - name: LDAP_ORGANISATION
+          valueFrom:
+            configMapKeyRef:
+              name: authenticator-config
+              key: LDAP_ORGANISATION
+        - name: LDAP_ROOTPASS
+          valueFrom:
+            secretKeyRef:
+              name: tapis-authenticator-secrets
+              key: dev-ldap-bind-credential
       - name: authenticator-api
         image: tapis/authenticator:{{authenticator_image_version}}
 #        command: ["sleep", "9999999999"]
