--- a/templates/globus-proxy/globus-proxy-config.yml
+++ b/templates/globus-proxy/globus-proxy-config.yml
@@ -9,7 +9,7 @@ data:
       "service_tenant_id": "{{globus_proxy_tenant_id}}",
       "service_name": "{{globus_proxy_name}}",
       "log_level": "{{globus_proxy_log_level}}",
-      "tenants": "{{globus_proxy_tenants|tojson}}",
-      "show_traceback": "{{globus_proxy_show_traceback|tojson}}",
+      "tenants": {{globus_proxy_tenants|tojson}},
+      "show_traceback": {{globus_proxy_show_traceback|tojson}},
       "use_sk": true
     }
