- authenticator ldap changes - added service_site_id to actors - misc

--- a/templates/authenticator/ldap/deploy.yml
+++ b/templates/authenticator/ldap/deploy.yml
@@ -33,4 +33,11 @@ spec:
             secretKeyRef:
               name: tapis-authenticator-secrets
               key: dev-ldap-bind-credential
+        volumeMounts:
+        - name: authenticator-ldap-data
+          mountPath: "/data/ldap"
+      volumes:
+      - name: authenticator-ldap-data
+        persistentVolumeClaim:
+          claimName: {{authenticator_ldap_pvc}}
 
