--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -170,7 +170,7 @@ http {
             }
             proxy_method GET;
             proxy_set_header X-Tapis-Token $http_x_tapis_token;
-            proxy_pass https://admin.develop.tapis.io/v3/site-router/check;
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}}/v3/site-router/check;
         }
     
 	# sites
