--- a/templates/actors/api/nginx-config.yml
+++ b/templates/actors/api/nginx-config.yml
@@ -19,37 +19,37 @@ data:
         }
     
         location ~* ^/v3/actors/admin(.*) {
-            proxy_pass http://actors-admin:5000/actors/admin$1$is_args$args;
+            proxy_pass http://actors-admin.{{actors_kube_domain}}:5000/actors/admin$1$is_args$args;
             proxy_set_header Host $host;
         }
     
         location ~* ^/v3/actors/(.*)/messages(.*) {
-            proxy_pass http://actors-mes:5000/actors/$1/messages$is_args$args;
+            proxy_pass http://actors-mes.{{actors_kube_domain}}:5000/actors/$1/messages$is_args$args;
             proxy_set_header Host $host;
         }
     
         location ~ ^/v3/actors/search/(.*) {
-            proxy_pass http://actors-reg:5000/actors/search/$1$is_args$args;
+            proxy_pass http://actors-reg.{{actors_kube_domain}}:5000/actors/search/$1$is_args$args;
             proxy_set_header Host $host;
         }
     
         location ~ /v3/actors/(.*)/workers(.*) {
-            proxy_pass http://actors-admin:5000/actors/$1/workers$2$is_args$args;
+            proxy_pass http://actors-admin.{{actors_kube_domain}}:5000/actors/$1/workers$2$is_args$args;
             proxy_set_header Host $host;
         }
     
         location ~ /v3/actors/aliases/(.*)/permissions {
-            proxy_pass http://actors-admin:5000/actors/aliases/$1/permissions$is_args$args;
+            proxy_pass http://actors-admin.{{actors_kube_domain}}:5000/actors/aliases/$1/permissions$is_args$args;
             proxy_set_header Host $host;
         }
     
         location ~ /v3/actors/(.*)/permissions {
-            proxy_pass http://actors-admin:5000/actors/$1/permissions$is_args$args;
+            proxy_pass http://actors-admin.{{actors_kube_domain}}:5000/actors/$1/permissions$is_args$args;
             proxy_set_header Host $host;
         }
     
         location ~ ^/v3/actors(.*) {
-            proxy_pass http://actors-reg:5000/actors$1$is_args$args;
+            proxy_pass http://actors-reg.{{actors_kube_domain}}:5000/actors$1$is_args$args;
             proxy_set_header Host $host;
         }
     
