- small fixes - removed _auth enabled in nginx.conf

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -138,7 +138,7 @@ http {
 	# tenants 
         location /v3/tenants
         {
-            auth_request /_auth;
+            # auth_request /_auth;
         {%- if "tenants" in proxy_nginx_service_list %}
             proxy_pass http://tenants-api:5000;
         {%- else %}
