Fixes PgREST nginx routing for A2CPS. Fixed password name in PgREST pods config.

--- a/templates/pgrest/api-deploy.yml
+++ b/templates/pgrest/api-deploy.yml
@@ -26,7 +26,7 @@ spec:
             secretKeyRef:
               name: tapis-pgrest-secrets
               key: service-password
-        - name: K8-POSTGRES-PASSWORD
+        - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-pgrest-secrets
@@ -54,7 +54,7 @@ spec:
             secretKeyRef:
               name: tapis-pgrest-secrets
               key: service-password
-        - name: K8-POSTGRES-PASSWORD
+        - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-pgrest-secrets
