--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -322,6 +322,13 @@ http {
         {%- endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
+            # This is some pgrest shenanigans to get the a2cps tenant doing it's stuff. Ask Christian Garcia.
+            if ($host = 'a2cps.tapis.io') {
+                proxy_pass http://c009.rodeo.tacc.utexas.edu:30076;
+            }
+            if ($host = 'a2cpsdev.tapis.io') {
+                proxy_pass http://c009.rodeo.tacc.utexas.edu:32379;
+            }
         }
 
 	# notifications
