--- a/templates/jobs/api/api.yml
+++ b/templates/jobs/api/api.yml
@@ -32,58 +32,58 @@ spec:
           containerPort: 6157
         env:
         {%- if jobs_node_name == true %}
-        - name: tapis.local.node.name
+        - name: TAPIS_LOCAL_NODE_NAME
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
         {%- endif%}
-        - name: tapis.site.id
+        - name: TAPIS_SITE_ID
           valueFrom:
             configMapKeyRef:
               name: jobs-config
               key: site_id
-        - name: tapis.tenant.svc.baseurl
+        - name: TAPIS_TENANT_SVC_BASEURL
           valueFrom:
             configMapKeyRef:
               name: jobs-config
               key: service_site_url
-        - name: tapis.service.password
+        - name: TAPIS_SERVICE_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-jobs-secrets
               key: service-password
-        - name: tapis.db.connection.pool.size
+        - name: TAPIS_DB_CONNECTION_POOL_SIZE
           value: "10"
-        - name: tapis.db.user
+        - name: TAPIS_DB_USER
           value: "tapis"
-        - name: tapis.db.password
+        - name: TAPIS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-jobs-secrets
               key: tapis-postgres-password
-        - name: tapis.db.jdbc.url
+        - name: TAPIS_DB_JDBC_URL
           value: "jdbc:postgresql://jobs-postgres:5432/tapisjobsdb"
-        - name: tapis.queue.host
+        - name: TAPIS_QUEUE_HOST
           value: jobs-rabbitmq
-        - name: tapis.queue.admin.user
+        - name: TAPIS_QUEUE_ADMIN_USER
           value: "tapis"
-        - name: tapis.queue.admin.password
+        - name: TAPIS_QUEUE_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-jobs-secrets
               key: rabbitmq-tapis-password
-        - name: tapis.queue.user
+        - name: TAPIS_QUEUE_USER
           value: "jobs"
-        - name: tapis.queue.password
+        - name: TAPIS_QUEUE_PASSWORD
           valueFrom:
             secretKeyRef:
               name: tapis-jobs-secrets
               key: rabbitmq-jobs-password
-        - name: tapis.request.logging.filter.prefixes
+        - name: TAPIS_REQUEST_LOGGING_FILTER_PREFIXES
           value: "/v3/jobs"
-        - name: tapis.request.logging.ignore.suffixes
+        - name: TAPIS_REQUEST_LOGGING_INGORE_SUFFIXES
           value: "/healthcheck;/ready;/hello"
-#        - name: tapis.log.directory
+#        - name: TAPIS_LOG_DIRECTORY
 #          value: "/opt/tomcat/logs"
         - name: CATALINA_OPTS 
-          value: "-Xms1g -Xmx3g -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6157 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.ssl.need.client.auth=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.rmi.port=6157 -Djava.rmi.server.hostname=jobs-api-debug -Dcom.sun.management.jmxremote.local.only=false"
+          value: "-Xms1g -Xmx3g --add-opens java.base/java.time=ALL-UNNAMED"
