--- a/templates/notifications/rabbitmq/deploy.yml
+++ b/templates/notifications/rabbitmq/deploy.yml
@@ -1,13 +1,8 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: notifications-rabbitmq
   name: notifications-rabbitmq
 spec:
-  replicas: 1
-  strategy: {}
   selector:
     matchLabels:
       app: notifications-rabbitmq
@@ -16,19 +11,33 @@ spec:
       labels:
         app: notifications-rabbitmq
     spec:
+      hostname: notifications-rabbitmq
       containers:
       - name: notifications-rabbitmq
-        image: rabbitmq:3.8-alpine
+        image: rabbitmq:3.8.11-management
         ports:
-        - containerPort: 5672
+        - name: rabbitmq
+          containerPort: 5672
+        - name: http
+          containerPort: 15672
         env:
+        - name: HOSTNAME
+          value: "notifications-rabbitmq"
+        - name: RABBITMQ_HOSTNAME
+          value: "notifications-rabbitmq"
+        - name: RABBITMQ_DEFAULT_USER
+          value: "tapis"
         - name: RABBITMQ_DEFAULT_PASS
           valueFrom:
             secretKeyRef:
-              name: tapis-notifications-secrets
-              key: rabbitmq-password
-        envFrom:
-          - configMapRef:
-              name: notifications-environment-vars
-      restartPolicy: Always
-
+              name: tapis-notifications-secrets 
+              key: rabbitmq-tapis-password
+        - name: RABBITMQ_VM_MEMORY_HIGH_WATERMARK
+          value: "2147483648"
+        volumeMounts:
+        - name: notifications-rabbitmq-data
+          mountPath: "/var/lib/rabbitmq/mnesia"
+      volumes:
+      - name: notifications-rabbitmq-data
+        persistentVolumeClaim:
+          claimName: {{notifications_rabbitmq_pvc}}
