--- a/templates/notifications/rabbitmq/service.yml
+++ b/templates/notifications/rabbitmq/service.yml
@@ -1,13 +1,28 @@
 apiVersion: v1
 kind: Service
-metadata:  
+metadata:
   name: notifications-rabbitmq
 spec:
-  selector:    
+  selector:
     app: notifications-rabbitmq
   ports:
   - name: notifications-rabbitmq
     port: 5672
-    protocol: TCP
     targetPort: 5672
+  - name: http
+    port: 15672
+    targetPort: 15672
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: notifications-rabbitmq-mgmt
+spec:
+  type: NodePort
+  selector:
+    app: notifications-rabbitmq
+  ports:
+  - name: http
+    port: 15672
+    targetPort: 15672
