--- a/inputgen/inputdescs/authenticator_desc.yml
+++ b/inputgen/inputdescs/authenticator_desc.yml
@@ -68,7 +68,7 @@ authenticator_use_sk:
   value: true
 
 authenticator_dev_ldap_tenant_id:
-  descrption: When using the "dev" LDAP this config specifies which tenant to assoicate with it. 
+  description: When using the "dev" LDAP this config specifies which tenant to assoicate with it. 
   source_vars:
     - authenticator_dev_ldap_tenant_id
   example: dev for primary, assocdev for the assoc associte site, etc.
