add example for service_tenants

--- a/inputgen/inputdescs/authenticator_desc.yml
+++ b/inputgen/inputdescs/authenticator_desc.yml
@@ -62,6 +62,7 @@ authenticator_service_tenants:
   source_vars:
     - authenticator_service_tenants
     - site_tenants
+  example: ["dev", "tacc"]
 
 authenticator_use_sk:
   description: Whether this service should use the SK for checking authorization (NOTE - should always set to True in production).
