--- a/inputgen/inputdescs/meta_desc.yml
+++ b/inputgen/inputdescs/meta_desc.yml
@@ -54,10 +54,10 @@ meta_mongo_backup_pvc:
   example: mongo-backup-claim0
 
 meta_restheart_mongo_pvc:
-  description: The name of the PVC to use for the meta Mongo Restheart instance. (TODO)
-  example: 
+  description: The name of the PVC to use for the meta Mongo Restheart instance.
   source_vars:
     - meta_mongo_pvc
+  example: restheart-mongo-vol02
   
 
 meta_mongo_restheart_image:
