[monitoring] Add Apps DB Grafana datasource; fix DB user

--- a/templates/monitoring/apps/grafana.yml
+++ b/templates/monitoring/apps/grafana.yml
@@ -49,6 +49,11 @@ spec:
           value: "true"
         - name: GF_INSTALL_PLUGINS
           value: "grafana-piechart-panel"
+        - name: TAPIS_APPS_DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: tapis-monitoring-secrets
+              key: postgres-ro-password
         ports:
         - name: grafana
           containerPort: 3000
