--- a/templates/monitoring/monitoring-config.yml
+++ b/templates/monitoring/monitoring-config.yml
@@ -55,17 +55,19 @@ data:
 
   # monitoring: grafana prometheus resources
   grafana-datasources.yaml: |-
-    {
-        "apiVersion": 1,
-        "datasources": [
-            {
-               "access":"proxy",
-                "editable": true,
-                "name": "prometheus",
-                "orgId": 1,
-                "type": "prometheus",
-                "url": "http://prometheus:9090",
-                "version": 1
-            }
-        ]
-    }
+    apiVersion: 1,
+    datasources:
+      - name: "Prometheus",
+        type: "prometheus",
+        url: "http://prometheus:9090",
+        access:"proxy"
+
+      - name: "Apps DB"
+        type: "postgres"
+        database: "tapisappdb"
+        user: "monitor"
+        secureJsonData:
+          password: $TAPIS_APPS_DB_PASSWORD
+        jsonData:
+          sslmode: 'disable'
+          postgresVersion: 1200
